	* Restructure the extension with two Static Templates: Old Style and CSS-styled. One static template must be added to the TS template after extension installation.
	* Add label tag on all form fields in css-styled html template
	* Prefix all field ids with tx-srfeuserregister-pi1- in css-styled html template
	* Generate field ids for all TCA-driven fields

2005-11-02  Sebastian Roth <sebastian.roth@c-qube.com>
	* Added basic template using CSS. Please note that it's not useable at the moment. We still zap our gremlins with it.
	* Cleaned up some other stuff like css & typoscript.

2005-11-01  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
	* Version 1.6.8
	* Corrections to a few glitches introduced in version 1.6.7.
	* Update to the Russian translation.
	* New TS constant confirmInvitationPID.

2005-10-28  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
	* Version 1.6.7
	* Add a few labels.
	* Add an 'en_US' localization for the frontend side of the extension.
	* Manual reviewed for US market. Thanks to Alex Heizer.
	* New TS constant salutation allows to switch salutation mode.
	* New TS constant useMd5Password enables md5-hashed passwords when extension KB MD5 FE Password (kb_md5fepw) is installed. HTML templates should be updated with markers ###FORM_ONSUBMIT### and ###PASSWORD_ONCHANGE###. See the example HTML templates. ###HIDDENFIELDS### marker is also added to subparts ###TEMPLATE_CREATE_SAVED### and ###TEMPLATE_SETFIXED_OK###.

2005-10-16  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
	* Correction to the useEmailAsUsername feature.
	* Take into account the user preference regarding html emails when sending infomails (used by sr_email_subscribe).

2005-10-13  Sebastian Roth <sebastian.roth@c-qube.com>
	* Modified remaining function call with reference parameter, see
	  last change at 2005-10-13.

2005-10-12  Sebastian Roth <sebastian.roth@c-qube.com>
	* fixed a possible problem with php and the option