@@ -1932,7 +1932,7 @@ The user is informed that a message has been sent to the email address and that 
 		<p>###GW1B######LABEL_V_DEAR######GW1E###</p>
 		<p>###LABEL_V_REGISTRATION_UPDATED_SUBJECT###</p>
 		<p>###LABEL_V_REGISTRATION_UPDATED_MESSAGE1###</p>
-		<p>###LABEL_KIND_REGARDS###<br />
+		<p>###LABEL_KIND_REGARDS_UPD###<br />
 		###GW1B######SITE_NAME######GW1E###</p>
 	</td></tr>
 </table>
@@ -2205,7 +2205,7 @@ In these plain text email templates the first line with content is used as subje
 		<p>###GW1B######LABEL_V_DEAR######GW1E###</p>
 		<p>###LABEL_V_REGISTRATION_UPDATED_SUBJECT###</p>
 		<p>###LABEL_V_REGISTRATION_UPDATED_MESSAGE1###</p>
-		<p>###LABEL_KIND_REGARDS###<br />
+		<p>###LABEL_KIND_REGARDS_UPD###<br />
 		###GW1B######SITE_NAME######GW1E###<br />
 		<a href="###SITE_URL###">###SITE_WWW###</a><br />
 		<a href="mailto:###SITE_EMAIL###">###SITE_EMAIL###</a></p>
@@ -2229,7 +2229,7 @@ In these plain text email templates the first line with content is used as subje
 ###LABEL_V_REGISTRATION_UPDATED_SUBJECT###
 ###LABEL_V_REGISTRATION_UPDATED_MESSAGE1###
 
-###LABEL_KIND_REGARDS###
+###LABEL_KIND_REGARDS_UPD###
 ###SITE_NAME###
 ###SITE_URL###
 ###SITE_EMAIL###
